fixed issues with sort by label misalignment

--- a/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
+++ b/webroot/skin/frontend/blueacorn/mis/css/styles-ie8.css
@@ -1425,10 +1425,14 @@ span.weee {
   position: absolute;
   left: 0; }
   .sorter label {
+    display: block;
+    float: left;
     font-family: "gesta", Verdana, Arial, sans-serif;
     font-size: 15px;
     color: #00247B;
-    top: -15px; }
+    top: -15px;
+    left: 15px;
+    margin-top: 25px; }
     .sorter label:after {
       content: ':';
       padding-left: 5px; }
